fix side-bar links spacing

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -6,8 +6,24 @@
     border-bottom: 1px solid #eeebee;
 }
 
+@mixin nav-flex {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
 .nav-list {
+    @include nav-flex;
+
     .nav-list-item {
+        &.active {
+            @include nav-flex;
+
+            .nav-list {
+                @include nav-flex;
+            }
+        }
+
         .nav-list-link {
             padding: 0.75rem 1rem;
             border-radius: 8px;
@@ -71,6 +87,10 @@
         width: calc((100% - 70rem) / 2 +  20rem);
         min-width:  20rem;
 
+        & + .main {
+            margin-left: max( 20rem,(100% - 70rem) / 2 +  20rem);
+        }
+
         .site-header {
             width: 100%;
 
@@ -92,10 +112,5 @@
             overflow-y: auto;
             flex: 1 1 auto;
         }
-
-        & + .main {
-            margin-left: max( 20rem,(100% - 70rem) / 2 +  20rem);
-        }
     }
-
 }
